# django-quanttide-iam

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg
depreciated/: authentication.py  serializers.py  versions.md
depreciated/authentication/: oidc.py  test_authentication_oauth2.py  token.py
depreciated/views/: identification.py  oauth2.py
django_qtauth/: apps.py  authentication.py  models.py  permissions.py  serializers.py
django_qtcloud_idam/: api.py  apps.py  authentication.py  models.py  permissions.py  serializers.py
django_quanttide_idam/: apps.py  authentication.py  urls.py
django_quanttide_idam/authentication/: __init__.py
django_quanttide_idam/forms/: __init__.py
django_quanttide_idam/forms/identification/: __init__.py  login.py  mixin.py  signup.py  vcode.py  wechat.py
django_quanttide_idam/models/: __init__.py
django_quanttide_idam/permissions/: organization.py  tenant.py
django_quanttide_idam/protocols/: rfc9068.py
django_quanttide_idam/serializers/: __init__.py  access_token.py  base.py  id_token.py
django_quanttide_idam/views/: __init__.py  organization.py
docs/: README.md  _config.yml  _toc.yml  index.md
docs/deprecated/: README.md
docs/depreciated/: grants.md  test_validators.py
docs/dev/: README.md  auth_oidc.md
docs/quick_start/: README.md
docs/tutorials/: README.md  exceptions.md
docs/user_guide/: extending_django_auth.md
drf_remote_auth/: apps.py  authentication.py  models.py  serializers.py  settings.py  urls.py  validators.py  views.py
drf_remote_auth/authentication/: __init__.py  oauth2.py  oidc.py  token.py
drf_remote_auth/migrations/: 0001_create_authuser.py  0001_create_user.py
drf_remote_auth/models/: base.py  oidc.py
drf_remote_auth/serializers/: __init__.py
drf_remote_auth/views/: oauth2.py  oidc.py
example/example/: settings.py  urls.py
example/oidc_client/: apps.py  urls.py  views.py
example/oidc_provider/: apps.py
example/token_client/: apps.py
example/token_provider/: apps.py  models.py
examples/example_provider/: README.md  manage.py
examples/example_resource_server/: README.md  manage.py
examples/monolith/: README.md  requirements.txt
tests/: data.py  mock.py  models.py  settings.py  test_authentication.py  test_authentication_oauth2.py  test_authentication_oidc.py  test_models.py  test_permissions.py  test_serializers.py  test_validators.py  test_views.py  test_views_oauth2.py  views.py
tests/forms/: test_forms_login.py  test_forms_signup.py  test_forms_vcode.py  test_forms_wechat.py
tests/migrations/: 0001_initial.py
tests/models/: test_models.py  test_models_organization.py
tests/serializers/: test_serializers.py  test_serializers_access_token.py  test_serializers_base.py  test_serializers_id_token.py  test_serializers_organization.py
tests/views/: test_views_authorization.py  test_views_group.py  test_views_identification.py  test_views_organization.py
(+40 files in other folders)
