[metadata]
name = drf-remote-auth
version = 0.1.0
author = QuantTide Inc.
author_email = opensource@quanttide.com
license = BSD-3 License
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    django>=2.0.0
    djangorestframework>=3.0.0

[options.packages.find]
exclude = tests